# security-rag

./: .env_example  .gitignore  README.md  Security_rag.postman_collection.json  docker-compose-base(gpu).yml  docker-compose-cpu.yml  docker-compose-ollama-gpu(not ready yet).yml  docker-compose-ollama-gpu.yml  docker-compose.yml  pyproject.toml
chroma_vector_store/: chroma.sqlite3
llm-service/: llm.py  vector_store.py
llm_service/: init_vector_store.py  loger.py  main.py  process_prompt.py  process_request.py  prompt_rag.py  security_rag.py  vector_store.py
llm_service/chroma_vector_store/: chroma.sqlite3
llm_service/chroma_vector_store/d775e6fe-a87b-48f7-95fc-06f13f361629/: index_metadata.pickle
notebooks/: langchain.ipynb  notebook.ipynb  sample.parquet  simple_rag.ipynb  wildguard_data.ipynb
services/base_llm/: Dockerfile  llm.py  logger.py  main.py  models.py  process_request.py  requirements.txt
services/chroma/: Dockerfile  init_vector_store.py  load_data.sh  requirements.txt
services/llm/: Dockerfile  main.py  models.py  process_request.py  prompt.py  requirements.txt  security_rag.py
services/sec_rag/: Dockerfile  main.py  models.py  process_request.py  prompt.py  requirements.txt  security_rag.py
services/sec_rag/chroma/: Dockerfile  init_vector_store.py  logger.py  requirements.txt
services/sec_rag/llm/: Dockerfile  logger.py  main.py  models.py  process_request.py  requirements.txt  security_rag.py
services/sec_rag/ollama/: Dockerfile  (+1 more)
services/tg_bot/: Dockerfile  bot.py  config.py  handlers.py  logger.py  requirements.txt  utils.py
tests/: pytest.ini  requirements.txt  test_rag.py
(+6 files in other folders)
