[tool.poetry]
name = "security-rag"
version = "0.1.0"
description = "Security RAG for LLM basic course (ITMO)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
langchain = "^0.3.10"
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.5.1%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl"}
langchain-huggingface = "^0.1.2"
chromadb = "^0.5.23"
langchain-mistralai = "^0.2.3"
langchain-community = "^0.3.10"
langchain-chroma = "^0.1.4"
datasets = "^3.2.0"
langsmith = "^0.2.3"
huggingface-hub = {extras = ["cli"], version = "^0.27.0"}
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
